// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReadStream should successfully parse ingestReadStream 1`] = `
Object {
  "elasticsearch_assets": Array [],
  "inherited_fields": Object {
    "@timestamp": Object {
      "from": "logs",
      "type": "date",
    },
    "message": Object {
      "from": "logs",
      "type": "match_only_text",
    },
  },
  "lifecycle": Object {
    "type": "dlm",
  },
  "name": "logs.nginx",
  "stream": Object {
    "ingest": Object {
      "processing": Array [
        Object {
          "condition": Object {
            "field": "log.level",
            "operator": "eq",
            "value": "error",
          },
          "config": Object {
            "grok": Object {
              "field": "message",
              "patterns": Array [
                "%{TIMESTAMP_ISO8601:event.timestamp} %{GREEDY:rest}",
              ],
            },
          },
        },
      ],
      "routing": Array [
        Object {
          "condition": Object {
            "field": "log.level",
            "operator": "eq",
            "value": "error",
          },
          "name": "logs.errors",
        },
      ],
    },
  },
}
`;

exports[`ReadStream should successfully parse wiredReadStream 1`] = `
Object {
  "elasticsearch_assets": Array [],
  "inherited_fields": Object {
    "@timestamp": Object {
      "from": "logs",
      "type": "date",
    },
    "message": Object {
      "from": "logs",
      "type": "match_only_text",
    },
  },
  "lifecycle": Object {
    "type": "dlm",
  },
  "name": "logs.nginx",
  "stream": Object {
    "ingest": Object {
      "processing": Array [
        Object {
          "condition": Object {
            "field": "log.level",
            "operator": "eq",
            "value": "error",
          },
          "config": Object {
            "grok": Object {
              "field": "message",
              "patterns": Array [
                "%{TIMESTAMP_ISO8601:event.timestamp} %{GREEDY:rest}",
              ],
            },
          },
        },
      ],
      "routing": Array [
        Object {
          "condition": Object {
            "field": "log.level",
            "operator": "eq",
            "value": "error",
          },
          "name": "logs.errors",
        },
      ],
      "wired": Object {
        "fields": Object {
          "new_field": Object {
            "type": "long",
          },
        },
      },
    },
  },
}
`;
